@@ -1,3 +1,4 @@
+Copyright (C) 2013 NaN-tic.
 Copyright (C) 2008-2013 Cédric Krier.
 Copyright (C) 2008-2013 Bertrand Chenal.
 Copyright (C) 2008-2013 B2CK SPRL.
