@@ -28,5 +28,23 @@ this repository contains the full copyright notices and license terms. -->
             <field name="function">generate_internal_shipment</field>
         </record>
 
+        <record model="ir.action.wizard" id="act_shipment_internal_create">
+            <field name="name">Create Internal Shipments</field>
+            <field name="wiz_name">stock.shipment.internal.create</field>
+        </record>
+        <record model="ir.ui.view"
+            id="shipment_internal_create_start_view_form">
+            <field name="model">stock.shipment.internal.create.start</field>
+            <field name="type">form</field>
+            <field name="name">stock_shipment_internal_create_start_form</field>
+        </record>
+        <menuitem parent="stock.menu_shipment_internal_form" sequence="10"
+            action="act_shipment_internal_create"
+            id="menu_shipment_internal_create"/>
+        <record model="ir.ui.menu-res.group"
+            id="menu_shipment_internal_form_group_purchase_request">
+            <field name="menu" ref="menu_shipment_internal_create"/>
+            <field name="group" ref="stock.group_stock_admin"/>
+        </record>
     </data>
 </tryton>
