@@ -1,0 +1,178 @@
+===========================
+Stock Shipment Out Scenario
+===========================
+
+=============
+General Setup
+=============
+
+Imports::
+
+    >>> import datetime
+    >>> from dateutil.relativedelta import relativedelta
+    >>> from decimal import Decimal
+    >>> from proteus import config, Model, Wizard
+    >>> today = datetime.date.today()
+
+Create database::
+
+    >>> config = config.set_trytond()
+    >>> config.pool.test = True
+
+Install stock Module::
+
+    >>> Module = Model.get('ir.module.module')
+    >>> modules = Module.find([('name', '=', 'stock_supply')])
+    >>> Module.install([x.id for x in modules], config.context)
+    >>> Wizard('ir.module.module.install_upgrade').execute('upgrade')
+
+Create company::
+
+    >>> Currency = Model.get('currency.currency')
+    >>> CurrencyRate = Model.get('currency.currency.rate')
+    >>> Company = Model.get('company.company')
+    >>> Party = Model.get('party.party')
+    >>> company_config = Wizard('company.company.config')
+    >>> company_config.execute('company')
+    >>> company = company_config.form
+    >>> party = Party(name='Dunder Mifflin')
+    >>> party.save()
+    >>> company.party = party
+    >>> currencies = Currency.find([('code', '=', 'USD')])
+    >>> if not currencies:
+    ...     currency = Currency(name='US Dollar', symbol=u'$', code='USD',
+    ...         rounding=Decimal('0.01'), mon_grouping='[3, 3, 0]',
+    ...         mon_decimal_point='.')
+    ...     currency.save()
+    ...     CurrencyRate(date=today + relativedelta(month=1, day=1),
+    ...         rate=Decimal('1.0'), currency=currency).save()
+    ... else:
+    ...     currency, = currencies
+    >>> company.currency = currency
+    >>> company_config.execute('add')
+    >>> company, = Company.find()
+
+Reload the context::
+
+    >>> User = Model.get('res.user')
+    >>> Group = Model.get('res.group')
+    >>> config._context = User.get_preferences(True, config.context)
+
+Create stock admin user::
+
+    >>> stock_admin_user = User()
+    >>> stock_admin_user.name = 'Stock Admin'
+    >>> stock_admin_user.login = 'stock_admin'
+    >>> stock_admin_user.main_company = company
+    >>> stock_admin_group, = Group.find([('name', '=', 'Stock Administration')])
+    >>> stock_admin_user.groups.append(stock_admin_group)
+    >>> stock_admin_user.save()
+
+Create stock user::
+
+    >>> stock_user = User()
+    >>> stock_user.name = 'Stock'
+    >>> stock_user.login = 'stock'
+    >>> stock_user.main_company = company
+    >>> stock_group, = Group.find([('name', '=', 'Stock')])
+    >>> stock_user.groups.append(stock_group)
+    >>> stock_user.save()
+
+Create product user::
+
+    >>> product_admin_user = User()
+    >>> product_admin_user.name = 'Product'
+    >>> product_admin_user.login = 'product'
+    >>> product_admin_user.main_company = company
+    >>> product_admin_group, = Group.find([
+    ...         ('name', '=', 'Product Administration')
+    ...         ])
+    >>> product_admin_user.groups.append(product_admin_group)
+    >>> product_admin_user.save()
+
+Create product::
+
+    >>> config.user = product_admin_user.id
+    >>> ProductUom = Model.get('product.uom')
+    >>> ProductTemplate = Model.get('product.template')
+    >>> Product = Model.get('product.product')
+    >>> unit, = ProductUom.find([('name', '=', 'Unit')])
+    >>> product = Product()
+    >>> template = ProductTemplate()
+    >>> template.name = 'Product'
+    >>> template.default_uom = unit
+    >>> template.type = 'goods'
+    >>> template.list_price = Decimal('20')
+    >>> template.cost_price = Decimal('8')
+    >>> template.save()
+    >>> product.template = template
+    >>> product.save()
+
+Get stock locations::
+
+    >>> config.user = stock_admin_user.id
+    >>> Location = Model.get('stock.location')
+    >>> warehouse_loc, = Location.find([('code', '=', 'WH')])
+    >>> supplier_loc, = Location.find([('code', '=', 'SUP')])
+    >>> customer_loc, = Location.find([('code', '=', 'CUS')])
+    >>> output_loc, = Location.find([('code', '=', 'OUT')])
+    >>> storage_loc, = Location.find([('code', '=', 'STO')])
+
+Create new internal location::
+
+    >>> Location = Model.get('stock.location')
+    >>> provisioning_loc = Location()
+    >>> provisioning_loc.name = 'Provisioning Location'
+    >>> provisioning_loc.type = 'storage'
+    >>> provisioning_loc.parent = warehouse_loc
+    >>> provisioning_loc.save()
+
+Create internal order point::
+
+    >>> OrderPoint = Model.get('stock.order_point')
+    >>> order_point = OrderPoint()
+    >>> order_point.product = product
+    >>> order_point.warehouse_location = warehouse_loc
+    >>> order_point.storage_location = storage_loc
+    >>> order_point.provisioning_location = provisioning_loc
+    >>> order_point.type = 'internal'
+    >>> order_point.min_quantity = 10
+    >>> order_point.max_quantity = 15
+    >>> order_point.save()
+
+Create inventory to add enough quantity in Provisioning Location::
+
+    >>> config.user = stock_user.id
+    >>> Inventory = Model.get('stock.inventory')
+    >>> InventoryLine = Model.get('stock.inventory.line')
+    >>> Location = Model.get('stock.location')
+    >>> inventory = Inventory()
+    >>> inventory.location = provisioning_loc
+    >>> inventory.save()
+    >>> inventory_line = InventoryLine(product=product, inventory=inventory)
+    >>> inventory_line.quantity = 100.0
+    >>> inventory_line.expected_quantity = 0.0
+    >>> inventory.save()
+    >>> inventory_line.save()
+    >>> Inventory.confirm([inventory.id], config.context)
+    >>> inventory.state
+    u'done'
+
+Execute internal supply::
+
+    >>> ShipmentInternal = Model.get('stock.shipment.internal')
+    >>> Wizard('stock.shipment.internal.create').execute('create_')
+    >>> shipment, = ShipmentInternal.find([])
+    >>> shipment.state
+    u'waiting'
+    >>> len(shipment.moves)
+    1
+    >>> move, = shipment.moves
+    >>> move.product.template.name
+    u'Product'
+    >>> move.quantity
+    15.0
+    >>> move.from_location.name
+    u'Provisioning Location'
+    >>> move.to_location.code
+    u'STO'
