@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form string="Create Internal Shipments" col="2">
+    <image name="tryton-dialog-information" xexpand="0" xfill="0"/>
+    <label string="Create Internal Shipments?" id="create"
+        yalign="0.0" xalign="0.0" xexpand="1"/>
+</form>
