@@ -1,3 +1,4 @@
+* Add wizard to create internal shipments
 * Add warning for late supplier moves when creating purchase request
 
 Version 2.8.0 - 2013-04-22
